testing/framework/resources/Advanced/Failing/mondrian/ambiguous/query6195.e
USA	CA	San Jose	7314	Michael Cellini	Michael Cellini	F	M	Partial High School	$30K - $50K
